--- a/STARS/templates/blank.html
+++ b/STARS/templates/blank.html
@@ -12,7 +12,7 @@
     <title>STAR</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
@@ -31,7 +31,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="home">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <!-- <i class="fas fa-laugh-wink"></i> -->
                 </div>
@@ -43,7 +43,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="home">
                     <i class="fa fa-home"></i>
                     <span>Home</span></a>
             </li>
@@ -61,9 +61,9 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Project Management</h6>
-                        <a class="collapse-item" href="my-project.html">My Project</a>
-                        <a class="collapse-item" href="all-project.html">All Project</a>
-                        <a class="collapse-item" href="create-project.html">Create Project</a>
+                        <a class="collapse-item" href="my-project">My Project</a>
+                        <a class="collapse-item" href="all-project">All Project</a>
+                        <a class="collapse-item" href="create-project">Create Project</a>
                     </div>
                 </div>
             </li>
@@ -80,9 +80,9 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Equipment Management</h6>
-                        <a class="collapse-item" href="my-equipment.html">My Equipment</a>
-                        <a class="collapse-item" href="all-equipment.html">All Equipment</a>
-                        <a class="collapse-item" href="add-equipment.html">Add Equipment</a>
+                        <a class="collapse-item" href="my-equipment">My Equipment</a>
+                        <a class="collapse-item" href="all-equipment">All Equipment</a>
+                        <a class="collapse-item" href="add-equipment">Add Equipment</a>
                     </div>
                 </div>
             </li>
@@ -90,7 +90,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="schedule.html">
+                <a class="nav-link" href="schedule">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Schadule</span></a>
             </li>
@@ -113,7 +113,7 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow fixed-top">
-                    <a class="navbar-brand text-center text-white" href="index.html">STAR</a>
+                    <a class="navbar-brand text-center text-white" href="home">STAR</a>
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
@@ -130,29 +130,29 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline">Admin</span>
                                 <img class="img-profile rounded-circle"
-                                    src="img/avatar.png">
+                                    src={% static "img/avatar.png" %}>
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="profile.html">
+                                <a class="dropdown-item" href="profile">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
                                 </a>
                                 <div class="dropdown-divider"></div>
 
-                                <a class="dropdown-item" href="register.html">
+                                <a class="dropdown-item" href="register">
                                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Register
                                 </a>
                                 <div class="dropdown-divider"></div>
 
-                                <a class="dropdown-item" href="login.html">
+                                <a class="dropdown-item" href="login">
                                     <i class="fas fa-sign-in-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Log In
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="login.html">
+                                <a class="dropdown-item" href="login">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Log Out
                                 </a>
