--- a/STARS/templates/not_use/equipment-manage.html
+++ b/STARS/templates/not_use/equipment-manage.html
@@ -12,7 +12,7 @@
     <title>STAR</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
@@ -31,7 +31,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="create-project.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="create-project">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <!-- <i class="fas fa-laugh-wink"></i> -->
                 </div>
@@ -43,7 +43,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="create-project.html">
+                <a class="nav-link" href="create-project">
                     <i class="fa fa-home"></i>
                     <span>Home</span></a>
             </li>
@@ -66,8 +66,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="create-project.html">Create</a>
-                        <a class="collapse-item" href="create-project.html">Manage</a>
+                        <a class="collapse-item" href="create-project">Create</a>
+                        <a class="collapse-item" href="create-project">Manage</a>
                     </div>
                 </div>
             </li>
@@ -84,8 +84,8 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="add-equipment.html">Add</a>
-                        <a class="collapse-item" href="my-equipment.html">Manage</a>
+                        <a class="collapse-item" href="add-equipment">Add</a>
+                        <a class="collapse-item" href="my-equipment">Manage</a>
                     </div>
                 </div>
             </li>
@@ -93,7 +93,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="create-project.html">
+                <a class="nav-link" href="create-project">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Schadule</span></a>
             </li>
@@ -101,7 +101,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="create-project.html">
+                <a class="nav-link" href="create-project">
                     <i class="fas fa-fw fa-cog"></i>
                     <span>Setting</span></a>
             </li>
@@ -186,24 +186,24 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="profile.html">
+                                <a class="dropdown-item" href="profile">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
                                 </a>
                                 <div class="dropdown-divider"></div>
 
-                                <a class="dropdown-item" href="register.html">
+                                <a class="dropdown-item" href="register">
                                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Register
                                 </a>
                                 <div class="dropdown-divider"></div>
 
-                                <a class="dropdown-item" href="login.html">
+                                <a class="dropdown-item" href="login">
                                     <i class="fas fa-sign-in-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Log In
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="logout.html" data-toggle="modal" data-target="#logoutModal">
+                                <a class="dropdown-item" href="logout" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Log Out
                                 </a>
@@ -336,7 +336,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <a class="btn btn-primary" href="login">Logout</a>
                 </div>
             </div>
         </div>
