--- a/STARS/templates/register.html
+++ b/STARS/templates/register.html
@@ -33,7 +33,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="home">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <!-- <i class="fas fa-laugh-wink"></i> -->
                 </div>
@@ -45,7 +45,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="home">
                     <i class="fa fa-home"></i>
                     <span>Home</span></a>
             </li>
@@ -63,9 +63,9 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Project Management</h6>
-                        <a class="collapse-item" href="my-project.html">My Project</a>
-                        <a class="collapse-item" href="all-project.html">All Project</a>
-                        <a class="collapse-item" href="create-project.html">Create Project</a>
+                        <a class="collapse-item" href="my-project">My Project</a>
+                        <a class="collapse-item" href="all-project">All Project</a>
+                        <a class="collapse-item" href="create-project">Create Project</a>
                     </div>
                 </div>
             </li>
@@ -82,9 +82,9 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Equipment Management</h6>
-                        <a class="collapse-item" href="my-equipment.html">My Equipment</a>
-                        <a class="collapse-item" href="all-equipment.html">All Equipment</a>
-                        <a class="collapse-item" href="add-equipment.html">Add Equipment</a>
+                        <a class="collapse-item" href="my-equipment">My Equipment</a>
+                        <a class="collapse-item" href="all-equipment">All Equipment</a>
+                        <a class="collapse-item" href="add-equipment">Add Equipment</a>
                     </div>
                 </div>
             </li>
@@ -92,7 +92,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="create-project.html">
+                <a class="nav-link" href="create-project">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Schadule</span></a>
             </li>
@@ -115,7 +115,7 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-dark topbar mb-4 static-top shadow fixed-top">
-                    <a class="navbar-brand text-center text-white" href="index.html">STAR</a>
+                    <a class="navbar-brand text-center text-white" href="home">STAR</a>
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
@@ -124,13 +124,13 @@
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown no-arrow">
-                            <a href="register.html" class="nav-link dropdown-toggle">Register</a>
+                            <a href="register" class="nav-link dropdown-toggle">Register</a>
                         </li>
                         <li class="nav-item dropdown no-arrow">
                             <a href="login" class="nav-link dropdown-toggle">Log In</a>
                         </li>
                         <li class="nav-item dropdown no-arrow">
-                            <a href="profile.html" class="nav-link dropdown-toggle">
+                            <a href="profile" class="nav-link dropdown-toggle">
                                 <span class="mr-2 d-none d-lg-inline">Profile</span>
                                 <img class="img-profile rounded-circle"
                                     src="{% static '/img/avatar.png' %}">
@@ -159,7 +159,7 @@
                                     <br><br>
                                     <div class="form-group row has-feedback">
                                         <div class="col">
-                                            <label class="text-white" for="username">User Name</label>
+                                            <label class="text-white" for="username">Username</label>
                                             <input type="text" class="form-control" id="username" name="username" placeholder="Your User Name">
                                         </div>
                                         <div class="col">
